# nBody

./: .gitignore  pyproject.toml
nbody/lib/: visualizer.py
